--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: 'Lato', 'Arial', 'sans-serif'; }
+  font-family: 'Lato', 'Arial', 'sans-serif';
+  font-size: 1.7rem;
+  font-family: 'Lato', 'Arial', sans-serif; }
 
 .containerDiv {
   display: grid;
@@ -83,7 +85,7 @@ body {
   color: #282c3f; }
 
 .btn__add-cart {
-  width: 10rem;
+  width: 11rem;
   border: solid 1px #ccc;
   color: #60b246;
   font-size: 1.3rem;
@@ -98,13 +100,17 @@ body {
 
 .btn_plus_minus {
   display: flex;
-  width: 12rem;
+  width: 11rem;
   height: 24px;
   justify-content: space-around;
   align-items: center;
   border: solid 1px #ccc;
   padding: .5rem .5rem;
   opacity: 0; }
+  @media only screen and (max-width: 37.5em) {
+    .btn_plus_minus {
+      width: 8rem;
+      margin: 4px; } }
 
 .btn_plus {
   font-size: 1.7rem;
@@ -396,7 +402,6 @@ body {
     left: 0;
     z-index: 1500;
     opacity: 0;
-    width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
   .navigation__list {
     position: absolute;
@@ -406,8 +411,7 @@ body {
     list-style: none;
     text-align: center;
     background-color: #333;
-    text-align: left;
-    transform: translateX(-100%); }
+    text-align: left; }
   .navigation__item {
     margin: 1rem; }
   .navigation .navigation__item:first-child {
@@ -431,8 +435,7 @@ body {
     transform: scale(80); }
   .navigation__checkbox:checked ~ .navigation__nav {
     opacity: 1;
-    width: 100%;
-    transform: translateX(20%); }
+    width: 100%; }
   .navigation__icon {
     position: relative;
     margin-top: 3.5rem; }
@@ -585,19 +588,6 @@ body {
     .carousel-inner {
       height: auto; } }
 
-.cartIcon {
-  position: relative; }
-
-.cart-notification {
-  color: #fff;
-  position: absolute;
-  top: -8px;
-  right: -9px;
-  font-weight: 900;
-  border: 2px solid red;
-  background-color: red;
-  border-radius: 47px; }
-
 .chk_category {
   display: none; }
 
@@ -655,8 +645,10 @@ body {
   display: flex;
   flex-direction: column;
   margin: 2rem;
-  font-size: 1.6rem;
   background-color: #fff; }
+  @media only screen and (max-width: 37.5em) {
+    .order {
+      margin: 4px; } }
   @media only screen and (max-width: 56.25em) {
     .order {
       grid-row: 1 / span 1; } }
@@ -665,8 +657,7 @@ body {
     justify-content: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 100%;
-    margin: 10px 5px; }
+    width: 100%; }
     .order__heading:first-child {
       font-weight: bold; }
   .order__total {
@@ -681,7 +672,7 @@ body {
       border-top: 2px solid #686b78;
       padding: 10px 5px; }
   .order_title {
-    width: 110px; }
+    width: 128px; }
 
 .btn_minus {
   transform: scale(1.2); }
@@ -734,11 +725,16 @@ body {
   margin-left: 2.5rem; }
 
 .cart_wrapper {
-  margin: 2rem;
-  font-size: 1.5rem; }
+  margin: 2rem; }
+  @media only screen and (max-width: 37.5em) {
+    .cart_wrapper {
+      margin: 0; } }
 
 .cart {
   padding: 2rem; }
+  @media only screen and (max-width: 37.5em) {
+    .cart {
+      padding: 0; } }
 
 .order__total {
   border-bottom: 1px solid #eee;
@@ -748,4 +744,19 @@ body {
   text-align: center; }
 
 .center {
+  text-align: center; }
+
+.cartIcon {
+  position: relative; }
+
+.cart-notification {
+  color: #fff;
+  position: absolute;
+  top: -8px;
+  right: -9px;
+  font-weight: 900;
+  border: 2px solid red;
+  background-color: red;
+  border-radius: 47px;
+  width: 20px;
   text-align: center; }
